Fix Image Gallery and empty array truncate

--- a/public/theme/green/css/global.css
+++ b/public/theme/green/css/global.css
@@ -2505,3 +2505,7 @@ display: none !important;
   width: 6px;
   border-radius: 6px;
 }
+
+.image-gallery-thumbnails-container{
+    transform: translate3d(0px, 0px, 0px) !important;
+}
